
{{{
#!ini
propel.builder.peer.class = propel.engine.builder.om.php5.PHP5PeerBuilder
}}}

Must be changed to:

{{{
#!ini
propel.builder.peer.class = builder.om.PHP5PeerBuilder  
}}}

Browse the Propel generator directory structure to find the classes you need.

=== DebugPDO Refactoring ===

To allow custom connection handlers, the debug code that was written in the `DebugPDO` class has been moved to `PropelPDO`. The change is completely backwards compatible, but makes it easier to connect to a database without using PDO.

During the change, the [wiki:Users/Documentation/1.5/07-Logging documentation about Propel logging and debugging features] was rewritten and should now be clearer.

== Miscellaneous ==

 * The `propel-gen` script no longer requires a path to the project directory if you call it from a project directory
 * You can now prefix all the table names of a database schema by setting the `tablePrefix` attribute of the `<database>` tag.
 * XSL transformation of your schemas is no longer enabled by default. Turn the `propel.schema.transform` setting to `true` in your `build.properties` to enable it again. This change removes the requirement on the libxslt extention for Propel.
 * `ModelObject::addSelectColumns()` now accepts an additional parameter to allow the use of table aliases
 * Added `ModelObject::clear()` to reinitialize a model object
 * Added `ModelObject::isPrimaryKeyNull()` method to check of an object was hydrated with no values (in case of a left join)
 * Added `Criteria::addSelectModifier($modifier)` to add more than one select modifier (e.g. 'SQL_CALC_FOUND_ROWS', 'HIGH_PRIORITY', etc.)
 * Added `PeerClass::addGetPrimaryKeyFromRow()` to retrieve the Primary key from a result row
 * Added a new set of constants in the generated Peer class to list column names without the table name (this is `BasePeer::TYPE_RAW_COLNAME`)
 * Removed references to Creole in the code (Propel uses PDO instead of Creole since version 1.3)