@@ -90,7 +90,7 @@ propel.addGenericMutators = false
 propel.addSaveMethod = true
 propel.addTimeStamp = false
 propel.addValidateMethod = true
-propel.addIncludes = true
+propel.addIncludes = false
 propel.addHooks = true
 propel.basePrefix = Base
 propel.saveException = PropelException
